# LixAssistantLimbusCompany

./: .gitignore  .gitingore  CHANGELOG.md  LICENSE  README.md  README_en.md  check_img.py  check_mouse.py  config_manager.py  globalVar.py  globals.py  graphical_user_interface.py  i18n.py  json_manager.py  lalc.spec  listen_mouse.py  main.py  messages.mo  messages.po  nb_log_config.py  packup_release.bat  requirements.txt  sinner_order.txt  test_task_loading.py  update_to.bat
lalc_backend/: .gitignore  client.py  deploy_to_pystand.bat  main.py  pyproject.toml  server.py
lalc_backend/config/: exp_cfg.json  mirror_cfg.json  other_task_cfg.json  theme_pack_cfg.json  thread_cfg.json
lalc_backend/input/: game_click.py  game_keyboard.py  game_long_press.py  game_screenshot.py  game_swipe.py  game_window.py  idle_monitor.py  input_handler.py
lalc_backend/pystand/: lalc_backend.int
lalc_backend/recognize/: brightness_threshold_match.py  color_template_match.py  edge_template_match.py  feature_match.py  get_component.py  img_recognizer.py  img_registry.py  nn_classifier.py  precise_template_match.py  pyramid_template_match.py  rapid_ocr.py  rapidocr.yaml  template_match.py  utils.py
lalc_backend/task_action/: __init__.py  base.py  event.py  luxcavation.py  mirror.py  utils.py
lalc_backend/utils/: __init__.py  config_manager.py  coordinate_printer.py  encrypt_decrypt.py  get_battle_skill.py  get_ego_gift_pic.py  get_mirror_path_node.py  get_save_mirror_legend.py  get_save_mirror_path.py  get_save_sinner_avatar.py  get_save_skill_icon.py  get_save_theme_packs.py  (+2 more)
(+250 files in other folders)
